apply plugin: 'com.android.application'

//def keystorePropertiesFile = rootProject.file("keystore.properties")
//def keystoreProperties = new Properties()
//keystoreProperties.load(new FileInputStream(keystorePropertiesFile))

android {
    compileSdkVersion 33
    //Upgrade this shit
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
    defaultConfig {
        applicationId "eu.faircode.xlua"
        minSdkVersion 23
        targetSdkVersion 33
        versionCode 152
        versionName "1.5.3"
        archivesBaseName = "XPL-EX-v$versionName-$versionCode"
    }

    signingConfigs {
        release {
            if (System.getenv('GITHUB_WORKSPACE') != null) {
                storeFile file("${System.getenv('GITHUB_WORKSPACE')}/KEYSTORE.JKS")
                storePassword System.getenv('KEYSTORE_PASSWORD')
                keyAlias System.getenv('KEY_ALIAS')
                keyPassword System.getenv('KEY_PASSWORD')
            }
        }

        // Keys from release are being used anyway but whatever
        debug {
            if (System.getenv('GITHUB_WORKSPACE') != null) {
                storeFile file("${System.getenv('GITHUB_WORKSPACE')}/KEYSTORE.JKS")
                storePassword System.getenv('KEYSTORE_PASSWORD')
                keyAlias System.getenv('KEY_ALIAS')
                keyPassword System.getenv('KEY_PASSWORD')
            }
        }
    }

    buildFeatures {
        viewBinding true
    }

    buildTypes {
        release {
            shrinkResources false
            minifyEnabled false
            useProguard = false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
            if (signingConfigs.release.storeFile) {
                signingConfig signingConfigs.release
            }
        }

        debug {
            debuggable true
            shrinkResources false
            minifyEnabled false
            useProguard = false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
            if (signingConfigs.release.storeFile) {
                signingConfig signingConfigs.release
            }
        }
    }


    packagingOptions {
        exclude 'META-INF/kotlinx_coroutines_core.version'
        exclude 'META-INF/versions/**'
        exclude 'META-INF/*.kotlin_module'
        pickFirst 'META-INF/kotlinx_coroutines_core.version'
        pickFirst 'META-INF/INDEX.LIST'
    }
}

dependencies {
    //    def material_version = "1.3.0"
    implementation 'androidx.gridlayout:gridlayout:1.0.0'
    def appcompat_version = "1.6.1"
    def swiperefresh_version = "1.1.0"
    def recyclerview_version = "1.1.0"
    def constraintlayout_version = "1.1.3"
    def material_version = "1.3.0"
    def glide_version = "4.11.0"

    implementation fileTree(dir: 'libs', include: ['*.jar'])


    implementation 'com.google.android.flexbox:flexbox:3.0.0'

    implementation 'me.zhanghai.android.fastscroll:library:1.3.0'

    //implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
    //implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'

    implementation 'androidx.lifecycle:lifecycle-viewmodel:2.5.1'
    implementation 'androidx.lifecycle:lifecycle-livedata:2.5.1'

    // https://mvnrepository.com/artifact/androidx.appcompat/appcompat
    implementation "androidx.appcompat:appcompat:$appcompat_version"

    // https://mvnrepository.com/artifact/androidx.swiperefreshlayout/swiperefreshlayout
    implementation "androidx.swiperefreshlayout:swiperefreshlayout:$swiperefresh_version"

    // https://mvnrepository.com/artifact/androidx.recyclerview/recyclerview
    implementation "androidx.recyclerview:recyclerview:$recyclerview_version"
    //implementation "androidx.recyclerview:recyclerview-selection:$recyclerview_version"

    // https://mvnrepository.com/artifact/androidx.constraintlayout/constraintlayout
    implementation "androidx.constraintlayout:constraintlayout:$constraintlayout_version"

    // https://mvnrepository.com/artifact/com.google.android.material/material
    implementation "com.google.android.material:material:$material_version"

    // https://bumptech.github.io/glide/
    // https://mvnrepository.com/artifact/com.github.bumptech.glide/glide
    // { exclude group: "com.android.support" }
    implementation("com.github.bumptech.glide:glide:$glide_version") {
        exclude group: "com.android.support"
    }
    annotationProcessor 'androidx.annotation:annotation:1.1.0'
    annotationProcessor "com.github.bumptech.glide:compiler:$glide_version"

    // https://github.com/rovo89/XposedBridge/wiki/Using-the-Xposed-Framework-API
    // https://bintray.com/rovo89/de.robv.android.xposed/api
    compileOnly 'de.robv.android.xposed:api:82'
    compileOnly 'de.robv.android.xposed:api:82:sources'
    implementation 'org.lsposed.hiddenapibypass:hiddenapibypass:4.3'

    implementation 'com.getkeepsafe.taptargetview:taptargetview:1.14.0'

    def coreVersion = "5.0.2"
    implementation "com.github.topjohnwu.libsu:core:$coreVersion"
    implementation "com.github.topjohnwu.libsu:service:$coreVersion"
    implementation "com.github.topjohnwu.libsu:nio:$coreVersion"




    // http://www.luaj.org/luaj/3.0/README.html
    // https://mvnrepository.com/artifact/org.luaj/luaj-jse
    // implementation 'org.luaj:luaj-jse:3.0.1'
}
